--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,12 @@
 version: "3.7"
 services: 
   app:
-    image: node:latest
+    build: .
     volumes: 
       - .:/app
     working_dir: /app
     ports: 
       - ${NODE_PORT}:${NODE_PORT}
+    environment: 
+      - MESSAGE=COMPOSE VIEW
     command: yarn start
